--- a/CODE/appspec.yml
+++ b/CODE/appspec.yml
@@ -1,4 +1,4 @@
-on: 0.0
+version: 0.0
 os: linux
 files:
   - source: /BYE
@@ -15,3 +15,4 @@ hooks:
     - location: scripts/stop_server
       timeout: 300
       runas: root
+
